added validations and handled exceptions

--- a/ecom/info/templates/about.html
+++ b/ecom/info/templates/about.html
@@ -25,7 +25,7 @@
           <div class="pb-md-5 pb-4">
             <p>But nothing the copy said could convince her and so it didn’t take long until a few insidious Copy Writers ambushed her, made her drunk with Longe and Parole and dragged her into their agency, where they abused her for their.</p>
             <p>But nothing the copy said could convince her and so it didn’t take long until a few insidious Copy Writers ambushed her.</p>
-            <p><a href="#" class="btn btn-primary">Shop now</a></p>
+            <p><a href="/shop/" class="btn btn-primary">Shop now</a></p>
           </div>
         </div>
       </div>
