--- a/ecom/templates/admin/adminbase.html
+++ b/ecom/templates/admin/adminbase.html
@@ -359,7 +359,7 @@
       }
     </style>
   </head>
-
+  
   <body class="bd1">
     <div id="wrapper">
       <div class="overlay"></div>
@@ -412,6 +412,8 @@
     </div>
 
     <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.2.1.min.js"></script>
+
+    <!--Hamburger script-->
     <script>
       $(document).ready(function () {
         var trigger = $('.hamburger'),
