--- a/ecom/templates/admin/admorders.html
+++ b/ecom/templates/admin/admorders.html
@@ -70,6 +70,7 @@
           {% endfor %}
         </tbody>
       </table>
+      <!-- Pagination Start -->
       <div class="clearfix">
           {% if order_items.has_other_pages %}
           <div class="hint-text">
@@ -108,6 +109,8 @@
           </ul>
         {% endif %}
       </div>
+      <!-- Pagination End -->
+
     </div>
   </div>
 {% endblock %}
