--- a/ecom/templates/cart/cart.html
+++ b/ecom/templates/cart/cart.html
@@ -141,6 +141,8 @@
       </svg>
     </div> 
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+
+    <!--Ajax for changing quantity-->
     <script>
       $(document).ready(function () {
         $('#reload').on('click', '.change_quantity', function (e) {
@@ -176,6 +178,7 @@
     </script>
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 
+    <!-- Toast for message -->
     <script>
       $(document).ready(function () {
         $('.toast').toast('show')
