--- a/ecom/templates/admin/admcategory.html
+++ b/ecom/templates/admin/admcategory.html
@@ -16,6 +16,7 @@
           <div class="col-sm-6">
             <h2><b>Brand details</b></h2>
           </div>
+          <!--ADD brand modal-->
           <div class="col-sm-6">
             <a href="#addCategoryModal" class="btn btn-success" data-toggle="modal"><i class="material-icons">&#xE147;</i> <span>Add New brand</span></a>
           </div>
@@ -29,6 +30,17 @@
         </div>
       </form>
       <!-- Search End -->
+      {% if messages %}
+        {% for message in messages %}
+          <div class="text-center">
+            <h4 class="{% if message.tags == 'success' %} 
+                    text-success {% else %} 
+                    text-danger {% endif %}">
+                    {{ message }} 
+            </h4>
+          </div>
+        {% endfor %}
+      {% endif %}
       <table class="table table-striped table-hover ms-3">
         <thead>
           <tr>
@@ -54,10 +66,10 @@
       </table>
       <!-- Pagination Start -->
       <div class="clearfix">
+        {% if brand.has_other_pages %}
         <div class="hint-text">
           <b>{{ brand }}</b>
         </div>
-        {% if brand.has_other_pages %}
           <ul class="pagination">
             {% if brand.has_previous %}
               <li class="page-item">
@@ -95,7 +107,7 @@
     <!-- Pagination End -->
   </div>
 
-  <!-- Category ADD Modal HTML -->
+  <!-- Brand ADD Modal HTML -->
   <div id="addCategoryModal" class="modal fade">
     <div class="modal-dialog">
       <div class="modal-content">
@@ -120,7 +132,7 @@
     </div>
   </div>
 
-  <!-- Edit Category Modal HTML -->
+  <!-- Edit Brand Modal HTML -->
   {% for i in brand %}
     <div id="editCategoryModal-{{ forloop.counter }}" class="modal fade">
       <div class="modal-dialog">
@@ -165,7 +177,6 @@
                   list
                 {% endif %} <b>{{ i.brand_name }}</b>?
               </p>
-              <!-- <p class="text-warning"><small>This action can be reversed.</small></p> -->
             </div>
             <div class="modal-footer">
               <input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel" />
