--- a/ecom/templates/admin/admhome.html
+++ b/ecom/templates/admin/admhome.html
@@ -3,13 +3,14 @@
 <link rel="stylesheet" href="{% static 'css/admindash.css' %}" />
 
 {% block content1 %}
-  <!-- Your existing content goes here -->
-  <div class="bg-muted pt-3">
-    <!-- New block for additional content -->
-    <h1 class="text-center">Dash Board</h1>
+
+<div class="bg-muted pt-3">
+  <h1 class="text-center">Dash Board</h1>
+  
+  <!-- sales percentage section  Start -->
     <div class="container mt-4">
       <div class="row">
-        <!-- Card 1 -->
+        <!-- Daily sales amount -->
         <div class="col-xl-3 col-md-6 mb-4">
           <div class="card h-100">
             <div class="card-body">
@@ -27,7 +28,7 @@
           </div>
         </div>
 
-        <!-- Card 2 -->
+        <!--Weekly sales amount -->
         <div class="col-xl-3 col-md-6 mb-4">
           <div class="card h-100">
             <div class="card-body">
@@ -45,7 +46,7 @@
           </div>
         </div>
 
-        <!-- Card 3 -->
+        <!-- Monthly sales amount -->
         <div class="col-xl-3 col-md-6 mb-4">
           <div class="card h-100">
             <div class="card-body">
@@ -63,7 +64,7 @@
           </div>
         </div>
 
-        <!-- Card 4 -->
+        <!-- Yeaerly sales amount-->
         <div class="col-xl-3 col-md-6 mb-4">
           <div class="card h-100">
             <div class="card-body">
@@ -82,22 +83,33 @@
         </div>
       </div>
     </div>
+  <!-- sales perc sectio  End -->
+
+    <!-- Monthly sales Graph Start -->
     <div class="container">
       <div class="bg-white">
         <canvas id="monthlySalesChart" width="300" height="150" style="margin: 80px; background-color: white; "></canvas>
       </div>
     </div>
+    <!-- Monthly sales Graph End -->
+
     <div class="container">
       <div class="row">
+        <!-- Order Status Doghnut Graph Start -->
         <div class="col-md-6 bg-white pb-1">
           <canvas id="orderStatusChart" width="300" height="150" style="margin: 80px; "></canvas>
         </div>
+        <!-- Order Status Doghnut Graph End  -->
+
+        <!-- Daily sales  Graph Start -->
         <div class="col-md-6 bg-white pb-1 border-left border-dark">
           <canvas id="dailySalesChart" width="300" height="200" style="margin: 80px 0 80px 0; "></canvas>
         </div>
+        <!-- Daily sales  Graph Start -->
       </div>
     </div>
-
+    
+<!-- Sales report section Start -->
     <div class="container mt-5">
       <div class="card p-4">
         <h4 class="mb-4">Sales Report</h4>
@@ -124,6 +136,7 @@
       </div>
     </div>
   </div>
+<!-- Sales report section End -->
 
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
@@ -158,7 +171,7 @@
         plugins: {
           title: {
             display: true,
-            text: 'Monthly Sales Overview', // Add your desired heading here
+            text: 'Monthly Sales Overview', 
             font: {
               size: 16,
               weight: 'bold'
@@ -232,7 +245,7 @@
           plugins: {
             title: {
               display: true,
-              text: 'Last 10 days sales', // Add your desired heading here
+              text: 'Last 10 days sales',
               font: {
                 size: 30,
                 weight: 'bold'
