--- a/ecom/templates/admin/admproducts.html
+++ b/ecom/templates/admin/admproducts.html
@@ -4,7 +4,6 @@
     <link rel="stylesheet" href="{% static 'css/styletable.css' %}">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto|Varela+Round">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.12/cropper.min.css" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
@@ -28,16 +27,19 @@
                     <a href="#addProduct" class="btn btn-success" data-toggle="modal"><i class="material-icons">&#xE147;</i> <span>Add New Product</span></a>                </div>
             </div>
         </div>
-        <form action="/search_product/">
+        <form action="/view_products/">
         <div class="row input-group ">
-            <input name="search"  type="search" class="form-control rounded offset-1 col-lg-8 col-sm-4 " placeholder="Search" aria-label="Search" aria-describedby="search-addon" />
-            <button type="submit" class="btn btn-outline-primary btn-primary col-lg-2 col-sm-3 " data-mdb-ripple-init>search</button>
+            <input name="search"  type="search" class="form-control rounded offset-1 col-lg-8 col-sm-4 " placeholder="Product name or Brand name" aria-label="Search" aria-describedby="search-addon" />
+            <button type="submit" class="btn btn-outline-primary btn-primary col-lg-2 col-sm-3 ">search</button>
           </div>
         </form>
                 {% if messages %}
                     {% for message in messages %}
                         <div class="text-center">
-                            <h3 class=" text-danger"> {{ message }} </h3>
+                            <h4 class="{% if message.tags == 'success' %} 
+                                text-success {% else %} text-danger
+                                {% endif %}"> {{ message }}
+                            </h4>
                         </div>
                         
                     {% endfor %}
@@ -45,10 +47,9 @@
         <table class="table table-striped table-hover ms-3">
             <thead>
                 <tr>
-                   
                     <th>Brand,Name</th>
-
                     <th>Category</th>
+                    <th>Original price</th>
                     <th>Selling price</th>
                     <th>Image</th>
                     <th>Actions</th>
@@ -62,7 +63,7 @@
                     <td><b class="text-dark"> {{prod.brand}} </b><br>
                         {{prod.name}}</td>
                     <td>{{prod.category}}</td>
-                    <!-- <td>{{prod.original_price}}</td> -->
+                    <td>{{prod.original_price}}</td> 
                     <td>{{prod.selling_price}}</td>
                     <td>
                     {% if prod.image1 %}<img src="{{prod.image1.url }}" alt="nike" style="width: 60px; height: 60px; ">{% else %} <h5>no image</h5> {% endif %}
@@ -74,7 +75,6 @@
                         {% else %}
                         <a href="#listproduct{{prod.id}}" class="blue pt-3" data-toggle="modal" title="unlist product"><i class="fa-solid fa-eye-slash fa-sm" style="color: red;"></i></a>
                         {% endif %}
-                        {% comment %} <a href="#deleteProduct{{prod.id}}" class="delete" data-toggle="modal" title="delete"><i class="material-icons" data-toggle="tooltip" title="Delete">&#xE872;</i></a> {% endcomment %}
                     </td>
                     <td class="text-center">
                         <a href="#addvariant{{prod.id}}" class="blue pt-3 " data-toggle="modal" title="add variant"> <i class="fa-solid fa-circle-plus fa-2xl" style="color: #00ff6e;"></i>  Add <br>Variant  </a>
@@ -114,19 +114,21 @@
                                                 <label>Quantity</label>
                                                 <input name="quantity" type="number" class="form-control" id="quantity" required>
                                             </div> 
-                                        <div class="modal-footer">
-                                            <input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
-                                            <input type="submit" class="btn btn-success" value="Add">
+                                            <div class="modal-footer">
+                                                <input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
+                                                <input type="submit" class="btn btn-success" value="Add">
+                                            </div>
+                                    
                                         </div>
                                     </form>
                                 </div>
                             </div>
                         </div>
                     </td>
-                    <td><a href="#collapseview{{prod.id}}" data-toggle="collapse" class="btn btn-info ">View </a></td>
-                    
+                    <td>
+                        <a href="#collapseview{{prod.id}}" data-toggle="collapse" class="btn btn-info ">View </a>
+                    </td>
                 </tr>
-                
                 <tr class="collapse" id="collapseview{{prod.id}}">
                     <td colspan="7">       
                         <div class="card card-body">
@@ -141,7 +143,6 @@
                                                     <p class="card-text"><strong>Color:</strong> {{ i.color }}</p>
                                                     <p class="card-text"><strong>Quantity:</strong> {{ i.stock }}</p>
                                                     <p class="card-text text-center"><a href="#edit_variant{{i.id}}" class="text-warning"  data-toggle="modal" > Update</a></p>
-                                                    <!-- <a href="/delete_variant/{{i.id}}">delete</a> -->
                                                 </div>
                                             </div>
                                         </div>
@@ -151,27 +152,51 @@
                         </div>
                     </td>
                 </tr>
-                
                 {% endfor %}
             </tbody>
         </table>
 
-      
-        
-        <!-- <div class="clearfix">
-            <div class="hint-text">Showing <b>5</b> out of <b>25</b> entries</div>
-            <ul class="pagination">
-                <li class="page-item disabled"><a href="#">Previous</a></li>
-                <li class="page-item"><a href="#" class="page-link">1</a></li>
-                <li class="page-item"><a href="#" class="page-link">2</a></li>
-                <li class="page-item active"><a href="#" class="page-link">3</a></li>
-                <li class="page-item"><a href="#" class="page-link">4</a></li>
-                <li class="page-item"><a href="#" class="page-link">5</a></li>
-                <li class="page-item"><a href="#" class="page-link">Next</a></li>
-            </ul>
-        </div> -->
+      <!--Pagination Start-->
+        <div class="clearfix">
+            {% if product.has_other_pages %}
+        <div class="hint-text">{{ product }}</div>
+          <ul class="pagination">
+            {% if product.has_previous %}
+              <li class="page-item">
+                <a href="?page={{ product.previous_page_number }} ">&lt;</a>
+              </li>
+            {% else %}
+              <li class="disabled">
+                <span>&lt;</span>
+              </li>
+            {% endif %}
+            {% for i in product.paginator.page_range %}
+              {% if product.number == i %}
+                <li class="active">
+                  <span>{{ i }} <span class="sr-only">(current)</span></span>
+                </li>
+              {% else %}
+                <li>
+                  <a href="?page={{ i }}">{{ i }}</a>
+                </li>
+              {% endif %}
+            {% endfor %}
+            {% if product.has_next %}
+              <li>
+                <a href="?page={{ product.next_page_number }}">&gt;</a>
+              </li>
+            {% else %}
+              <li class="disabled">
+                <span>&gt;</span>
+              </li>
+            {% endif %}
+          </ul>
+        {% endif %}
+        </div>
+      <!--Pagination End-->
     </div>
 </div>
+
 <!-- ADD product Modal HTML -->
 <div id="addProduct" class="modal fade">
     <div class="modal-dialog new1">
@@ -255,6 +280,7 @@
         </div>
     </div>
 </div>
+
 <!-- Edit Modal HTML -->
 {% for prod in product %}
 <div id="editProduct{{prod.id}}" class="modal fade">
@@ -411,7 +437,9 @@
 </div>
 {% endfor %}
 
+
 <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+<!--Showing image after adding from file-->
 <script>
     $(document).ready(function() {
         // Function to read and preview image
@@ -435,6 +463,8 @@
     });
     </script>
 <script src="https://kit.fontawesome.com/412a20d28b.js" crossorigin="anonymous"></script>
+
+<!-- validating prices-->
 <script>
     const form = document.getElementById("addpform")
     form.addEventListener("submit",function(event){
@@ -461,6 +491,8 @@
         }
     });
 </script>
+
+<!--Validating quantity-->
 <script>
     const form3 = document.getElementById("addvform")
     form3.addEventListener("submit",function(event){
@@ -487,11 +519,10 @@
 
 </script>
 
+<!--Image cropper-->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.12/cropper.min.js"></script>
 
 <script>
-
-
     document.addEventListener('DOMContentLoaded', function () {
         let cropper;
 
@@ -530,15 +561,13 @@
 
             if (cropper) {
                 const canvas = cropper.getCroppedCanvas();
-                const croppedImageData = canvas.toDataURL(); // Get cropped image data as base64 string
+                const croppedImageData = canvas.toDataURL();
                 document.getElementById('croppedImageData').value = croppedImageData;
-                // You can handle the cropped data as needed (e.g., send it to the server)
             } else {
                 console.error('Cropper not initialized or no image selected.');
             }
         });
     });
 </script>
-
 
 {% endblock content1 %}
