--- a/ecom/templates/admin/view_returns.html
+++ b/ecom/templates/admin/view_returns.html
@@ -1,191 +1,208 @@
-{% include "admin/adminbase.html" %}
+{% include 'admin/adminbase.html' %}
 {% load static %}
 <head>
-    <link rel="stylesheet" href="{% static 'css/styletable.css' %}">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto|Varela+Round">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    
+  <link rel="stylesheet" href="{% static 'css/styletable.css' %}" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto|Varela+Round" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 {% block content1 %}
-<div class="container tbd1">
+  <div class="container tbd1">
     <div class="table-wrapper">
-        <div class="table-title">
-            <div class="row">
-                <div class="col-sm-12 text-center">
-                    <h2>Return <b>Management</b></h2>
-                </div>
-            </div>
-        </div>
-        <div class="row input-group mb-4 mt-4">
-            <form action="/view_returns/">
-            <input type="search" name="search" class="form-control rounded offset-1 col-lg-8 col-sm-4 " placeholder="username or product name or status" aria-label="Search" aria-describedby="search-addon" />
-            <button type="submit" class="btn btn-outline-primary btn-primary col-lg-2 col-sm-3 " >search</button>
-            </form>
+      <div class="table-title">
+        <div class="row">
+          <div class="col-sm-12 text-center">
+            <h2>Return <b>Management</b></h2>
           </div>
-                {% if messages %}
-                    {% for message in messages %}
-                        <div class="text-center">
-                            <h3 class="{% if message.tags == 'success' %} 
-                                text-success {% else %} text-danger
-                                {% endif %}"> {{ message }}
-                            </h3>
-                        </div>
-                    {% endfor %}
+        </div>
+      </div>
+      <div class="row input-group mb-4 mt-4">
+        <form action="/view_returns/">
+          <input type="search" name="search" class="form-control rounded offset-1 col-lg-8 col-sm-4" placeholder="username or product name or status" aria-label="Search" aria-describedby="search-addon" />
+          <button type="submit" class="btn btn-outline-primary btn-primary col-lg-2 col-sm-3">search</button>
+        </form>
+      </div>
+      {% if messages %}
+        {% for message in messages %}
+          <div class="text-center">
+            <h3 class="{% if message.tags == 'success' %}
+                     text-success {% else %} text-danger
+              {% endif %}">
+              {{ message }}
+            </h3>
+          </div>
+        {% endfor %}
+      {% endif %}
+      <table class="table table-striped table-hover ms-3">
+        <thead>
+          <tr>
+            <th>Order id</th>
+            <th>Product Name</th>
+            <th>Address</th>
+            <th>Price x Quantity</th>
+            <th>Size</th>
+            <th>Payment</th>
+            <th>
+              Ordered ,<br /> Delivered date
+            </th>
+            <th>Requested Date</th>
+            <th>Return Date</th>
+            <th>Status</th>
+          </tr>
+        </thead>
+        <tbody>
+          {% for item in returns %}
+            <tr>
+              <td>{{ item.order.id }}</td>
+              <td style=" word-wrap: break-word; max-width:100px">
+                {{ item.order.product.product_id.brand }} <br /> {{ item.order.product.product_id.name }}
+              </td>
+              <td style=" word-wrap: break-word; max-width:139px">
+                {{ item.order.address1.state }},{{ item.order.address1.district }} <br />
+                {{ item.order.address1.house }},{{ item.order.address1.town }}, <br />Pin {{ item.order.address1.pincode }} <br /> {{ item.order.address1.number }}
+              </td>
+              <td>{{ item.order.amount }} x {{ item.order.quantity }}</td>
+              <td>{{ item.order.size }}</td>
+              <td>{{ item.order.order_id.payment_mode }}</td>
+              <td>
+                {{ item.order.order_id.order_date }}, <br /> {{ item.order.delivery_date }}
+              </td>
+              <td>{{ item.request_date }}</td>
+              <td>
+                {{ item.return_date }}
+                {% if item.order.status == 'return accepted' %}
+                  <br />&nbsp; <a href="#editdate{{ item.id }}" class="edit" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Edit">&#xE254;</i></a>
                 {% endif %}
-        <table class="table table-striped table-hover ms-3">
-            <thead>
-                <tr>
-                    <th>Order id</th>
-                    <th>Product Name</th>
-                    <th>Address</th>
-                    <th>Price x Quantity</th>
-                    <th>Size</th>
-                    <th>Payment</th>
-                    <th>Ordered ,<br> Delivered date</th>
-                    <th>Requested Date</th>
-                    <th>Return Date</th>
-                    <th>Status</th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for item in returns  %}
-                <tr>
-                    <td> {{item.id}} </td>
-                    <td style=" word-wrap: break-word; max-width:100px"> {{item.order.product.product_id.brand}} <br> {{item.order.product.product_id.name}} </td>             
-                    <td style=" word-wrap: break-word; max-width:139px"> {{item.order.address1.state}},{{item.order.address1.district}} <br>
-                        {{item.order.address1.house}},{{item.order.address1.town}},  <br>Pin {{item.order.address1.pincode}} <br> {{item.order.address1.number}}
-                    </td>
-                    <td> {{item.order.amount}} x {{item.order.quantity}}  </td>
-                    <td> {{item.order.size}} </td>
-                    <td> {{item.order.order_id.payment_mode}} </td>
-                    <td>
-                        {{item.order.order_id.order_date}}, <br> {{item.order.delivery_date}} 
-                    </td>
-                    <td> {{item.request_date}} </td>
-                    <td> {{item.return_date}} 
-                        {% if item.order.status == 'return accepted' %}
-                            <br>&nbsp; <a href="#editdate{{item.id}}" class="edit " data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Edit">&#xE254;</i></a>
-                        {% endif %}
-                    </td>
-                    <td> 
-                        {{item.order.status}} 
-                        {% if item.order.status == 'return request' %}
-                         <a href="#editstatus{{item.id}}" class="edit" data-toggle="modal"><i class="material-icons " data-toggle="tooltip" title="Edit">&#xE254;</i></a>
-                         {% endif %}
-                    </td>
-                </tr>
-                {% endfor %}
-                
-            </tbody>
-        </table>
-       <div class="clearfix">
-           {% if returns.has_other_pages %}
-           <div class="hint-text"><b>{{returns}} </b> </div> 
-            <ul class="pagination">
-                {% if returns.has_previous %}
-                    <li class="page-item"><a href="?page={{returns.previous_page_number}}" class="page-link">&lt;</a></li>
-                {% else %}
-                    <li class="page-item disabled"><a href="#">&lt;</a></li>
+              </td>
+              <td>
+                {{ item.order.status }}
+                {% if item.order.status == 'return request' %}
+                  <a href="#editstatus{{ item.id }}" class="edit" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Edit">&#xE254;</i></a>
                 {% endif %}
-                {% for i in returns.paginator.page_range %}
-                    {% if returns.number == i %}
-                        <li class="active"><span>{{ i }} <span class="sr-only"> (current) </span></span></li>
-                    {% else %}
-                        <li class="page-item"><a href="?page={{ i }}" class="page-link">{{ i }} </a></li>
-                    {% endif %}
-                {% endfor %}
-                {% if returns.has_next %}
-                    <li class="page-item"><a href="?page={{returns.next_page_number}}" class="page-link">&gt;</a></li>
-                {% else %}
-                    <li class="page-item disabled"><a href="#" class="page-link">&gt;</a></li>
-                {% endif %}
-            </ul>
+              </td>
+            </tr>
+          {% endfor %}
+        </tbody>
+      </table>
+      <div class="clearfix">
+        {% if returns.has_other_pages %}
+          <div class="hint-text">
+            <b>{{ returns }}</b>
+          </div>
+          <ul class="pagination">
+            {% if returns.has_previous %}
+              <li class="page-item">
+                <a href="?page={{ returns.previous_page_number }}" class="page-link">&lt;</a>
+              </li>
+            {% else %}
+              <li class="page-item disabled">
+                <a href="#">&lt;</a>
+              </li>
             {% endif %}
-        </div> 
+            {% for i in returns.paginator.page_range %}
+              {% if returns.number == i %}
+                <li class="active">
+                  <span>{{ i }} <span class="sr-only">(current)</span></span>
+                </li>
+              {% else %}
+                <li class="page-item">
+                  <a href="?page={{ i }}" class="page-link">{{ i }}</a>
+                </li>
+              {% endif %}
+            {% endfor %}
+            {% if returns.has_next %}
+              <li class="page-item">
+                <a href="?page={{ returns.next_page_number }}" class="page-link">&gt;</a>
+              </li>
+            {% else %}
+              <li class="page-item disabled">
+                <a href="#" class="page-link">&gt;</a>
+              </li>
+            {% endif %}
+          </ul>
+        {% endif %}
+      </div>
     </div>
-</div>
-<!-- edit status Modal HTML -->
-{% for item in returns %}
-<div id="editstatus{{item.id}}" class="modal fade">
-    <div class="modal-dialog">
+  </div>
+  <!-- edit status Modal HTML -->
+  {% for item in returns %}
+    <div id="editstatus{{ item.id }}" class="modal fade">
+      <div class="modal-dialog">
         <div class="modal-content">
-            <form method="post">
-                {% csrf_token %}
-                <div class="modal-header">						
-                    <h4 class="modal-title">Update Status</h4>
-                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                </div>
-                <div class="modal-body">					
-                        <input name="id" type="text" class="form-control"  value="{{item.id}}"  hidden>
-                    <div class="form-group">
-                        <label>Product</label>
-                        <input type="text" class="form-control" value="{{item.order.product.product_id}}" disabled>
-                    </div>
-                    <div class="form-group">
-                        <label>Request Date</label>
-                        <input type="text" class="form-control" value="{{item.request_date}}" disabled>
-                    </div>
-                    <span>Reason </span>
-                    <div class="form-group">
-                        <textarea name="reason" id="reason" cols="44" rows="4" disabled>{{item.reason}} </textarea>
-                    </div>
-                    <div class="form-group">
-                        <label for="category"><b>Status</b></label>       
-                        <select class="form-control" id="status" name="status" required>
-                            <option value="return accepted"> Accept Return Request</option>
-                            <option value="return denied"> Deny Return Request</option>
-                        </select>
-                        
-                    </div>
-                    
-                </div>
-                <div class="modal-footer">
-                    <input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
-                    <input type="submit" class="btn btn-success" value="Update">
-                </div>
-            </form>
+          <form method="post">
+            {% csrf_token %}
+            <div class="modal-header">
+              <h4 class="modal-title">Update Status</h4>
+              <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+            </div>
+            <div class="modal-body">
+              <input name="id" type="text" class="form-control" value="{{ item.id }}" hidden />
+              <div class="form-group">
+                <label>Product</label>
+                <input type="text" class="form-control" value="{{ item.order.product.product_id }}" disabled />
+              </div>
+              <div class="form-group">
+                <label>Request Date</label>
+                <input type="text" class="form-control" value="{{ item.request_date }}" disabled />
+              </div>
+              <span>Reason</span>
+              <div class="form-group">
+                <textarea name="reason" id="reason" cols="44" rows="4" disabled>{{ item.reason }}</textarea>
+              </div>
+              <div class="form-group">
+                <label for="category"><b>Status</b></label>
+                <select class="form-control" id="status" name="status" required>
+                  <option value="return accepted">Accept Return Request</option>
+                  <option value="return denied">Deny Return Request</option>
+                </select>
+              </div>
+            </div>
+            <div class="modal-footer">
+              <input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel" />
+              <input type="submit" class="btn btn-success" value="Update" />
+            </div>
+          </form>
         </div>
+      </div>
     </div>
-</div>
-{% endfor %}
+  {% endfor %}
 
-<!-- update delivery date  -->
-{% for item in returns %}
-<div id="editdate{{item.id}}" class="modal fade">
-    <div class="modal-dialog">
+  <!-- update delivery date -->
+  {% for item in returns %}
+    <div id="editdate{{ item.id }}" class="modal fade">
+      <div class="modal-dialog">
         <div class="modal-content">
-            <form method="post" action="/update_date/{{item.id}}">
-                {% csrf_token %}
-                <div class="modal-header">						
-                    <h4 class="modal-title">Update Status</h4>
-                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                </div>
-                <div class="modal-body">					
-                    <div class="form-group">
-                        <label>Product</label>
-                        <input type="text" class="form-control" value="{{item.order.product.product_id}}" disabled>
-                    </div>
-                    <div class="form-group">
-                        <label>Requets Date</label>
-                        <input type="text" class="form-control" value="{{item.request_date}}" disabled>
-                    </div>
-                    <div class="form-group">
-                        <label for="category">Delivery Date : {{ item.return_date }}</label>       
-                        <input type="date" class="form-control" value="{{ item.return_date|date:'Y-m-d' }}" name="date" required>
-                    </div>
-                </div>
-                <div class="modal-footer">
-                    <input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
-                    <input type="submit" class="btn btn-success" value="Update">
-                </div>
-            </form>
+          <form method="post" action="/update_date/{{ item.id }}">
+            {% csrf_token %}
+            <div class="modal-header">
+              <h4 class="modal-title">Update Status</h4>
+              <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+            </div>
+            <div class="modal-body">
+              <div class="form-group">
+                <label>Product</label>
+                <input type="text" class="form-control" value="{{ item.order.product.product_id }}" disabled />
+              </div>
+              <div class="form-group">
+                <label>Requets Date</label>
+                <input type="text" class="form-control" value="{{ item.request_date }}" disabled />
+              </div>
+              <div class="form-group">
+                <label for="category">Delivery Date : {{ item.return_date }}</label>
+                <input type="date" class="form-control" value="{{ item.return_date|date:'Y-m-d' }}" name="date" required />
+              </div>
+            </div>
+            <div class="modal-footer">
+              <input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel" />
+              <input type="submit" class="btn btn-success" value="Update" />
+            </div>
+          </form>
         </div>
+      </div>
     </div>
-</div>
-{% endfor %}
-<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-<script src="https://kit.fontawesome.com/412a20d28b.js" crossorigin="anonymous"></script>
+  {% endfor %}
+  <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+  <script src="https://kit.fontawesome.com/412a20d28b.js" crossorigin="anonymous"></script>
 {% endblock content1 %}
