--- a/ecom/templates/profile/order_history.html
+++ b/ecom/templates/profile/order_history.html
@@ -36,7 +36,7 @@
                 Payment Method <i class="fas fa-shield"></i>
               </th>
               <th scope="col">
-                View Details <i class="fas fa-eye"></i>
+                View Details <i class="fas fa-ticket"></i>
               </th>
             </tr>
           </thead>
