--- a/ecom/templates/page_not_found.html
+++ b/ecom/templates/page_not_found.html
@@ -149,7 +149,7 @@
             <div class="single-logo-item mt-2">
               <img src="{% static 'images/adidas.jpg' %}" alt="adidas logo" />
             </div>
-            <div class="single-logo-item mt-3">
+            <div class="single-logo-item mt-4 pt-3">
               <img src="{% static 'images/fila.png' %}" alt="fila logo" />
             </div>
             <div class="single-logo-item">
