--- a/ecom/info/templates/about.html
+++ b/ecom/info/templates/about.html
@@ -4,28 +4,36 @@
 	{% block navbar %}
     {% include 'navbar.html' %}
 	{% endblock navbar %}
-  <body class="goto-here">
 	{% block maincontent %} 
+<style>
+  .single-logo-item img {
+    max-width: 180px;
+    margin: 0 auto;
+    margin: 50px;
+  }
+  
+
+  
+</style>
   <h1 class=" text-center ">About Us</h1>
   <section class="ftco-section ftco-no-pb ftco-no-pt bg-light">
 
     <div class="container">
       <div class="row">
         <div class="col-md-5 p-md-5 img img-2 d-flex justify-content-center align-items-center" style="background-image: url({% static 'images/about.jpg' %});">
-          <a href="#" class="icon popup-vimeo d-flex justify-content-center align-items-center">
-            <span class="icon-play"></span>
-          </a>
         </div>
         <div class="col-md-7 py-md-5 wrap-about pb-md-5 ftco-animate">
           <div class="heading-section-bold mb-4 mt-md-5">
             <div class="ml-md-0">
-              <h2 class="mb-4">Stablished Sinced 1975</h2>
+              <h2 class="mb-4">Established Sinced 2023</h2>
             </div>
           </div>
           <div class="pb-md-5 pb-4">
-            <p>But nothing the copy said could convince her and so it didn’t take long until a few insidious Copy Writers ambushed her, made her drunk with Longe and Parole and dragged her into their agency, where they abused her for their.</p>
-            <p>But nothing the copy said could convince her and so it didn’t take long until a few insidious Copy Writers ambushed her.</p>
-            <p><a href="/shop/" class="btn btn-primary">Shop now</a></p>
+           <p> From a spark of an idea in 2023, SHOEZY has blossomed into a thriving hub for shoe enthusiasts. We're constantly evolving, just like your style, but one thing remains constant: our unwavering commitment to quality, selection, and a sprinkle of shoe magic. Join us on this journey as we rewrite the rules of footwear, one comfortable, stylish step at a time.</p>
+           
+            <p> Find Your Perfect Fit. Shop Now & Experience Comfort! <br>
+               Say Goodbye to Boring Shoes. Shop Now & Unleash Your Inner Shoe Fanatic</p>
+            <p class="text-center"><a href="/shop/" class="btn btn-primary py-2 px-3" style="border-radius: 0px;">Shop now</a></p>
           </div>
         </div>
       </div>
@@ -43,7 +51,9 @@
               </div>
               <div class="media-body">
                 <h3 class="heading">Free Shipping</h3>
-                <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+                <p>
+                  Free Shipping on Every Pair ! <br /> – Walk in Style, No Extra Mile. <br />👟🌟
+                </p>
               </div>
             </div>      
           </div>
@@ -54,8 +64,10 @@
               </div>
               <div class="media-body">
                 <h3 class="heading">Support Customer</h3>
-                <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-              </div>
+                <p>
+                  Your Comfort is Our Priority! <br /> – Exceptional Customer Support anyime <br /> 🤝🌟
+                </p>             
+               </div>
             </div>    
           </div>
           <div class="col-lg-4 text-center d-flex align-self-stretch ftco-animate">
@@ -65,7 +77,9 @@
               </div>
               <div class="media-body">
                 <h3 class="heading">Secure Payments</h3>
-                <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+                <p>
+                  Shop with Confidence! <br /> – Enjoy Secure Payments for Peace of Mind. 🔒💳
+                </p>
               </div>
             </div>      
           </div>
@@ -73,7 +87,30 @@
 			</div>
 		</section>
 
-   
+    <!-- logo carousel -->
+  <div class="logo-carousel-section">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12">
+          <div class="logo-carousel-inner d-flex p-4">
+            <div class="single-logo-item">
+              <img src="{% static 'images/nike.jpg' %}" alt="nike logo" />
+            </div>
+            <div class="single-logo-item mt-2">
+              <img src="{% static 'images/adidas.jpg' %}" alt="adidas logo" />
+            </div>
+            <div class="single-logo-item mt-4 pt-3">
+              <img src="{% static 'images/fila.png' %}" alt="fila logo" />
+            </div>
+            <div class="single-logo-item mb-2">
+              <img src="{% static 'images/Converse.png' %}" alt="converse logo" />
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- end logo carousel -->
 
     <section class="ftco-section testimony-section">
       <div class="container">
@@ -86,16 +123,18 @@
         				</div>
         				<div class="text">
 	        				<h3>Free Shipping</h3>
-	        				<p class="mb-0">Separated they live in. A small river named Duden flows</p>
-        				</div>
+                  <p>
+                    Free Shipping. No strings attached. Just happy feet that can't be matched.
+                  </p>        	
+          			</div>
         			</div>
         			<div class="services-2 p-4 d-flex ftco-animate">
         				<div class="icon">
         					<span class="flaticon-heart-box"></span>
         				</div>
         				<div class="text">
-	        				<h3>Valuable Gifts</h3>
-	        				<p class="mb-0">Separated they live in. A small river named Duden flows</p>
+	        				<h3>Secure Packing</h3>
+	        				<p class="mb-0">Pack a Punch, Not a Panic: Secure Packing for Peace of Mind</p>
 	        			</div>
         			</div>
         			<div class="services-2 p-4 d-flex ftco-animate">
@@ -103,8 +142,8 @@
         					<span class="flaticon-payment-security"></span>
         				</div>
         				<div class="text">
-	        				<h3>All Day Support</h3>
-	        				<p class="mb-0">Separated they live in. A small river named Duden flows</p>
+	        				<h3>Secure Payments</h3>
+	        				<p class="mb-0">Shop with a smile, pay with ease. Secure payments, guaranteed to appease.</p>
 	        			</div>
         			</div>
         			<div class="services-2 p-4 d-flex ftco-animate">
@@ -113,84 +152,41 @@
         				</div>
         				<div class="text">
 	        				<h3>All Day Support</h3>
-	        				<p class="mb-0">Separated they live in. A small river named Duden flows</p>
+	        				<p class="mb-0"> Your comfort is our constant: All-day support, every step of the way.</p>
 	        			</div>
         			</div>
         		</div>
         	</div>
           <div class="col-lg-7">
           	<div class="heading-section ftco-animate mb-5">
-	            <h2 class="mb-4">Our satisfied customer says</h2>
-	            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in</p>
+	            <h2 class="mb-4">Our WorkForce says</h2>
 	          </div>
             <div class="carousel-testimony owl-carousel ftco-animate">
               <div class="item">
                 <div class="testimony-wrap">
-                  <div class="user-img mb-4" style="background-image: url(images/person_1.jpg)">
+                  <div class="user-img mb-4" style="background-image: url({% static 'images/person_1.jpg' %})">
                     <span class="quote d-flex align-items-center justify-content-center">
                       <i class="icon-quote-left"></i>
                     </span>
                   </div>
                   <div class="text">
-                    <p class="mb-4 pl-4 line">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-                    <p class="name">Garreth Smith</p>
+                    <p class="mb-4 pl-4 line">We're not just selling shoes, we're paving the way for a more comfortable and confident future, one step at a time</p>
+                    <p class="name">Peter Parken</p>
+                    <span class="position">CEO</span>
+                  </div>
+                </div>
+              </div>
+              <div class="item">
+                <div class="testimony-wrap">
+                  <div class="user-img mb-4" style="background-image: url({% static 'images/person_2.jpg' %} )">
+                    <span class="quote d-flex align-items-center justify-content-center">
+                      <i class="icon-quote-left"></i>
+                    </span>
+                  </div>
+                  <div class="text">
+                    <p class="mb-4 pl-4 line">From social media stories to interactive experiences, I weave a narrative that makes you want to be part of the shoe dream. It's not just marketing, it's an invitation to join the movement</p>
+                    <p class="name">Bruce Wayne</p>
                     <span class="position">Marketing Manager</span>
-                  </div>
-                </div>
-              </div>
-              <div class="item">
-                <div class="testimony-wrap">
-                  <div class="user-img mb-4" style="background-image: url(images/person_2.jpg)">
-                    <span class="quote d-flex align-items-center justify-content-center">
-                      <i class="icon-quote-left"></i>
-                    </span>
-                  </div>
-                  <div class="text">
-                    <p class="mb-4 pl-4 line">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-                    <p class="name">Garreth Smith</p>
-                    <span class="position">Interface Designer</span>
-                  </div>
-                </div>
-              </div>
-              <div class="item">
-                <div class="testimony-wrap">
-                  <div class="user-img mb-4" style="background-image: url(images/person_3.jpg)">
-                    <span class="quote d-flex align-items-center justify-content-center">
-                      <i class="icon-quote-left"></i>
-                    </span>
-                  </div>
-                  <div class="text">
-                    <p class="mb-4 pl-4 line">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-                    <p class="name">Garreth Smith</p>
-                    <span class="position">UI Designer</span>
-                  </div>
-                </div>
-              </div>
-              <div class="item">
-                <div class="testimony-wrap">
-                  <div class="user-img mb-4" style="background-image: url(images/person_1.jpg)">
-                    <span class="quote d-flex align-items-center justify-content-center">
-                      <i class="icon-quote-left"></i>
-                    </span>
-                  </div>
-                  <div class="text">
-                    <p class="mb-4 pl-4 line">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-                    <p class="name">Garreth Smith</p>
-                    <span class="position">Web Developer</span>
-                  </div>
-                </div>
-              </div>
-              <div class="item">
-                <div class="testimony-wrap">
-                  <div class="user-img mb-4" style="background-image: url(images/person_1.jpg)">
-                    <span class="quote d-flex align-items-center justify-content-center">
-                      <i class="icon-quote-left"></i>
-                    </span>
-                  </div>
-                  <div class="text">
-                    <p class="mb-4 pl-4 line">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-                    <p class="name">Garreth Smith</p>
-                    <span class="position">System Analyst</span>
                   </div>
                 </div>
               </div>
@@ -199,14 +195,12 @@
         </div>
       </div>
     </section>
-
     <section class="ftco-gallery">
     	<div class="container">
     		<div class="row justify-content-center">
     			<div class="col-md-8 heading-section text-center mb-4 ftco-animate">
             <h2 class="mb-4">Follow Us On Instagram</h2>
-            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in</p>
-          </div>
+            <p>Stay Connected, Stay Stylish! Join us on Instagram for Exclusive Updates, Behind-the-Scenes, and a Daily Dose of Fashion Inspiration ✨</p>          </div>
     		</div>
     	</div>
     	<div class="container-fluid px-0">
