--- a/ecom/info/templates/contact.html
+++ b/ecom/info/templates/contact.html
@@ -8,17 +8,12 @@
 	{% block maincontent %} 
 
     
-<!-- 
-    <div class="hero-wrap hero-bread" style="background-image: url('images/bg_6.jpg');">
-      <div class="container">
-        <div class="row no-gutters slider-text align-items-center justify-content-center">
+ 
+        <div class="row no-gutters slider-text align-items-center justify-content-center ">
           <div class="col-md-9 ftco-animate text-center">
-          	<p class="breadcrumbs"><span class="mr-2"><a href="/">Home</a></span> <span>Contact</span></p>
             <h1 class="mb-0 bread">Contact Us</h1>
           </div>
         </div>
-      </div>
-    </div> -->
 
     <section class="ftco-section contact-section bg-light">
       <div class="container">
@@ -26,22 +21,22 @@
           <div class="w-100"></div>
           <div class="col-md-3 d-flex">
           	<div class="info bg-white p-4">
-	            <p><span>Address:</span> 198 West 21th Street, Suite 721 New York NY 10016</p>
+	            <p><span>Address: <br></span>Shoezy near highlight mall, Panthirankavu, Kozhikode,Kerala,India</p>
 	          </div>
           </div>
           <div class="col-md-3 d-flex">
           	<div class="info bg-white p-4">
-	            <p><span>Phone:</span> <a href="tel://1234567920">+ 1235 2355 98</a></p>
+	            <p><span>Phone:</span> <a href="tel://1234567920">+91 7510875454</a></p>
 	          </div>
           </div>
           <div class="col-md-3 d-flex">
           	<div class="info bg-white p-4">
-	            <p><span>Email:</span> <a href="mailto:info@yoursite.com">info@yoursite.com</a></p>
+	            <p><span>Email:</span> <a href="mailto:info@yoursite.com">shoezymain@gmail.com</a></p>
 	          </div>
           </div>
           <div class="col-md-3 d-flex">
           	<div class="info bg-white p-4">
-	            <p><span>Website</span> <a href="#">yoursite.com</a></p>
+	            <p><span>Website</span> <a href="/">Shoezy.com</a></p>
 	          </div>
           </div>
         </div>
@@ -62,8 +57,8 @@
               <div class="form-group">
                 <textarea name="" id="" cols="30" rows="7" name="message" class="form-control" placeholder="Message"></textarea>
               </div>
-              <div class="form-group">
-                <input type="submit" value="Send Message" class="btn btn-primary py-3 px-5">
+              <div class="form-group text-center">
+                <input type="submit" value="Send Message" class="btn btn-primary py-3 px-5" style="border-radius: 0px;">
               </div>
             </form>
           
@@ -80,7 +75,7 @@
     		<div class="row justify-content-center">
     			<div class="col-md-8 heading-section text-center mb-4 ftco-animate">
             <h2 class="mb-4">Follow Us On Instagram</h2>
-            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in</p>
+			<p>Stay Connected, Stay Stylish! Join us on Instagram for Exclusive Updates, Behind-the-Scenes, and a Daily Dose of Fashion Inspiration ✨</p>
           </div>
     		</div>
     	</div>
