--- a/ecom/templates/home1.html
+++ b/ecom/templates/home1.html
@@ -19,12 +19,13 @@
         <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
         <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
       </ol>
+      <a href="/shop/">
       <div class="carousel-inner">
         <div class="carousel-item active">
           <img class="d-block w-100 img-fluid" style="height: 600px;" src="{% static 'images/banner1.jpeg' %}" alt="First slide" />
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100 img-fluid" style="height: 600px;" src="{% static 'images/banner25.png' %}" alt="Second slide" />
+          <img class="d-block w-100 img-fluid" style="height: 600px;" src="{% static 'images/banner31.png' %}" alt="Second slide" />
         </div>
         <div class="carousel-item">
           <img class="d-block w-100 img-fluid" style="height: 600px;" src="{% static 'images/banner23.png' %}" alt="Third slide" />
@@ -36,6 +37,7 @@
           <img class="d-block w-100 img-fluid" style="height: 600px;" src="{% static 'images/banner30.png' %}" alt="Third slide" />
         </div>
       </div>
+      </a>
       <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
         <span class="sr-only">Previous</span>
@@ -201,8 +203,8 @@
                   <div class="col-md-6">
                     <div class="choose-wrap wrap img align-self-stretch bg-light d-flex align-items-center">
                       <div class="text text-center px-5">
-                        <span class="subheading">Popular</span>
-                        <h2>Top rated</h2>
+                        <span class="subheading">Latest</span>
+                        <h2>Top Trends</h2>
                         <p>"Explore What's in Vogue! Our Popular Picks Showcase the Latest Trends and Timeless Classics. Elevate Your Style with the Favorites of Many.</p>
                         <p>
                           <a href="/shop/" class="btn btn-black px-3 py-2">Shop now</a>
