--- a/ecom/templates/shop/shop.html
+++ b/ecom/templates/shop/shop.html
@@ -305,7 +305,7 @@
         <div class="row justify-content-center">
             <div class="col-md-8 heading-section text-center mb-4 ftco-animate">
                 <h2 class="mb-4">Follow Us On Instagram</h2>
-                <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in</p>
+                <p>Stay Connected, Stay Stylish! Join us on Instagram for Exclusive Updates, Behind-the-Scenes, and a Daily Dose of Fashion Inspiration ✨</p>
             </div>
         </div>
     </div>
