changed size to checkbox

--- a/ecom/static/css/style.css
+++ b/ecom/static/css/style.css
@@ -9033,7 +9033,7 @@ h1, h2, h3, h4, h5,
       appearance: none; }
 
 .cart-list {
-  overflow-x: hidden; }
+  overflow-x: scroll; }
 
 .table {
   min-width: 1000px !important;
