--- a/ecom/info/templates/about.html
+++ b/ecom/info/templates/about.html
@@ -90,17 +90,17 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
-          <div class="logo-carousel-inner d-flex p-4">
-            <div class="single-logo-item">
+          <div class="logo-carousel-inner d-flex flex-wrap  justify-content-center align-items-center p-4">
+            <div class="single-logo-item col-lg-3 col-md-5 col-11">
               <img src="{% static 'images/nike.jpg' %}" alt="nike logo" />
             </div>
-            <div class="single-logo-item mt-2">
+            <div class="single-logo-item col-lg-3  col-md-5  col-11">
               <img src="{% static 'images/adidas.jpg' %}" alt="adidas logo" />
             </div>
-            <div class="single-logo-item mt-4 pt-3">
+            <div class="single-logo-item col-lg-3 col-md-5  col-11">
               <img src="{% static 'images/fila.png' %}" alt="fila logo" />
             </div>
-            <div class="single-logo-item mb-2">
+            <div class="single-logo-item col-lg-3 col-md-5  col-11">
               <img src="{% static 'images/Converse.png' %}" alt="converse logo" />
             </div>
           </div>
