--- a/ecom/templates/home1.html
+++ b/ecom/templates/home1.html
@@ -9,35 +9,85 @@
   <!-- END nav -->
   {% block maincontent %}
     <link rel="stylesheet" href="{% static 'css/height.css' %}" />
+    <style>
+      /* Base styles */
+      #carouselExampleIndicators {
+        height: 83vh; /* Default height */
+      }
+    .bannerhg{
+      max-height: 635px;
+    }
+      .carousel-item img {
+        height: auto; /* Make images responsive */
+        width: 100%; /* Ensure images fill the carousel width */
+        object-fit: cover; /* Maintain aspect ratio and cover entire carousel */
+      }
+    
+      /* Responsive styles */
+      @media (max-width: 1200px) {
+        /* Adjust height for tablets */
+        #carouselExampleIndicators {
+          height: 60vh;
+        }
+        .bannerhg{
+          max-height: 480px;
+        }
+      }
 
+      @media (max-width: 991px) {
+        /* Adjust height for tablets */
+        #carouselExampleIndicators {
+          height: 50vh;
+        }
+        .bannerhg{
+          max-height: 384px;
+        }
+      }
+
+      @media (max-width: 768px) {
+        /* Adjust height for tablets */
+        #carouselExampleIndicators {
+          height: 40vh;
+        }
+      }
+    
+    
+      @media (max-width: 576px) {
+        /* Adjust height for mobile phones */
+        #carouselExampleIndicators {
+          height: 30vh;
+        }
+      }
+    
+      @media (max-width: 375px) {
+        /* Further adjust height for smaller mobile phones */
+        #carouselExampleIndicators {
+          height: 20vh;
+        }
+      }
+    </style>
     <!-- banner start -->
-    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" style="height: 80vh;">
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
       <ol class="carousel-indicators">
         <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
         <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
         <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
         <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
       </ol>
-      <a href="/shop/">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img class="d-block w-100 img-fluid" style="height: 600px;" src="{% static 'images/banner1.jpeg' %}" alt="First slide" />
+          <img class="d-block w-100 img-fluid" src="{% static 'images/banner1.jpeg' %}" alt="First slide" />
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100 img-fluid" style="height: 600px;" src="{% static 'images/banner31.png' %}" alt="Second slide" />
+          <img class="d-block w-100 img-fluid bannerhg"  src="{% static 'images/banner31.png' %}" alt="First slide" />
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100 img-fluid" style="height: 600px;" src="{% static 'images/banner23.png' %}" alt="Third slide" />
+          <img class="d-block w-100 img-fluid" src="{% static 'images/banner23.png' %}" alt="Third slide" />
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100 img-fluid" style="height: 600px;" src="{% static 'images/banner22.png' %}" alt="Third slide" />
-        </div>
-        <div class="carousel-item">
-          <img class="d-block w-100 img-fluid" style="height: 600px;" src="{% static 'images/banner30.png' %}" alt="Third slide" />
+          <img class="d-block w-100 img-fluid" src="{% static 'images/banner22.png' %}" alt="Third slide" />
         </div>
       </div>
-      </a>
       <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
         <span class="sr-only">Previous</span>
@@ -49,7 +99,7 @@
     </div>
     <!-- banner end -->
 
-    <section class="ftco-section ftco-no-pt ftco-no-pb">
+    <section class="ftco-section ftco-no-pt ftco-no-pb mt-0">
       <div class="container">
         <div class="row no-gutters ftco-services">
           <div class="col-lg-4 text-center d-flex align-self-stretch ftco-animate">
