--- a/ecom/templates/home1.html
+++ b/ecom/templates/home1.html
@@ -156,7 +156,32 @@
         </div>
       </div>
       <div class="container">
+      {% if messages %}
+            <div aria-live="polite" aria-atomic="true" style="position: fixed; top: 50%; right: 3%; min-height: 200px; min-width: 200px; z-index: 9999;">
+              {% for message in messages %}
+                <div class="toast border {% if message.tags == 'success' %}
+                border-success {% else %}border-danger
+                  {% endif %}"
+                  role="alert"
+                  aria-live="assertive"
+                  aria-atomic="true"
+                  data-delay="5000"
+                  style="margin-top: 10px;">
+                  <div class="toast-header">
+                    <strong class="mr-auto {% if message.tags == 'success' %}
+                  text-success{% else %}text-danger
+                      {% endif %}   text-capitalize">
+                      {{ message.tags }}
+                    </strong>
+                    <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                  </div>
+                  <div class="toast-body">{{ message }}</div>
+                </div>
+              {% endfor %}
+            </div>
+          {% endif %}
         <div class="row mainprod">
+          
           {% for prod in product %}
             <div class="col-sm-12 col-md-6 col-lg-3 ftco-animate d-flex" id="divhgt">
               <div class="product d-flex flex-column hgt align-items-center justify-content-center align-content-center" id="divhg">
@@ -201,7 +226,7 @@
                   <p class="bottom-area d-flex px-3">
                     <a href="{% url 'singleproduct' prod.id %}" class="add-to-cart text-center py-2 mr-1"><span>View details</span></a>
                     {% if prod.id in wishlist1 %}
-                      <a href="/wishlist/" class="buy-now text-center py-2">View wishlist<span><i class="ion-ios-heart ml-1"></i></span></a>
+                      <a href="/wishlist/" class="buy-now text-center py-2">View wish<span><i class="ion-ios-heart ml-1"></i></span></a>
                     {% else %}
                       <a href="{% url 'add_to_wish' prod.id %}?next={{ request.path }}" class="buy-now text-center py-2">Add to wish<span><i class="ion-ios-heart ml-1"></i></span></a>
                     {% endif %}
@@ -352,5 +377,12 @@
         <circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#F96D00" />
       </svg>
     </div>
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+
+    <script>
+      $(document).ready(function () {
+        $('.toast').toast('show');
+      });
+      </script>
   {% endblock maincontent %}
 </body>
